--- a/public/index.pug
+++ b/public/index.pug
@@ -42,7 +42,6 @@ html(lang=lang)
           path(
             d='M11.2 0a.8.8 0 0 0-.8.8v11.4L7.26 9.44a.803.803 0 0 0-1.13.074l-1.05 1.2a.8.8 0 0 0 .073 1.13l6.33 5.54a.795.795 0 0 0 1.05 0l6.32-5.54a.8.8 0 0 0 .074-1.13l-1.05-1.2a.804.804 0 0 0-1.13-.074l-3.14 2.76V.8a.8.8 0 0 0-.8-.8zm-8 20.8a.8.8 0 0 0-.8.8v1.6a.8.8 0 0 0 .8.8h17.6a.8.8 0 0 0 .8-.8v-1.6a.8.8 0 0 0-.8-.8z'
           )
-
   body.no-js.order-alpha.download-svg(tabindex='-1')
     .popup_modal.popup__top.hidden
       .popup-body 
@@ -361,6 +360,8 @@ html(lang=lang)
                   loading='lazy',
                   alt=`${ t_('$iconTitle icon').replace('$iconTitle', icon.localizedTitle || icon.title) }`
                 )
+            if icon.deprecatedAt
+              span.deprecated !{ '&#10060; ' + t_('DEPRECATED (removal at $version)').replace('$version', `<a href="https://github.com/simple-icons/simple-icons/milestone/${icon.deprecatedAt.milestoneNumber}">v${icon.deprecatedAt.version}</a>`) }
             .grid-item__row
               if icon.guidelines
                 a.grid-item__link.link-button(
