--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -894,6 +894,43 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   }
 }
 
+/* Deprecated notice */
+.deprecated {
+  font-family: var(--font-family-stylized);
+}
+
+.deprecated__text {
+  position: relative;
+  float: right;
+  top: -18px;
+  right: 13px;
+  text-transform: uppercase;
+  font-size: 11px;
+}
+
+.deprecated__text::before {
+  content: '';
+  background-image: url('./assets/warning.svg');
+  background-repeat: no-repeat;
+  height: 100%;
+  left: -8px;
+  position: absolute;
+  top: 3px;
+  width: 100%;
+  transform: scale(1.25, 1.25);
+}
+
+.deprecated__message {
+  position: absolute;
+  right: 9px;
+  margin-top: -3px;
+  font-size: 12px;
+  transform: scale(0.95);
+}
+.deprecated__message:hover {
+  color: var(--color-text-light);
+}
+
 /* .link-button */
 
 .link-button::before {
