Minimal valid implementation

--- a/public/removed.pug
+++ b/public/removed.pug
@@ -35,7 +35,7 @@ html(lang='en-US')
           li.grid-item
             .grid-item__row.mv-2.fg-2
               button(
-                class=`grid-item__color copy-button copy-color ${icon.light ? "contrast-light" : "contrast-dark"} ${icon.superLight ? "border-light" : ""}  ${icon.superDark ? "border-dark" : ""}`,
+                class=`grid-item__color copy-button copy-color ${icon.light ? "contrast-light" : "contrast-dark"}`,
                 style=`background-color: #${icon.hex}`,
                 title=`${icon.title} color`,
                 disabled
