Fix some errors

--- a/public/index.pug
+++ b/public/index.pug
@@ -71,7 +71,7 @@ html(lang=lang)
         .detail-body__left
           img#icon-preview
         .detail-body__right
-          h2#icon-title.grid-item__title
+          h2#icon-title
           button#icon-color
           a#icon-source
           a#icon-guidelines
@@ -81,6 +81,7 @@ html(lang=lang)
         a#icon-download-color-svg.detail-button(role='button', download) #{ t_('Download colored SVG') }
         a#icon-download-pdf.detail-button(role='button', download) #{ t_('Download PDF') }
         a#icon-report.report__icon.detail-button(role='button') #{ t_('Report icon as outdated') }
+
     header.header
       ul.header__list
         li.header__list-item
